[workspace]
resolver = "2"
members = ["db", "cli"]

[workspace.package]
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/reverser"
edition = "2024"
license = "AGPL-3.0-only"
version = "0.1.0"

[workspace.dependencies]
cli-helpers = "0.1"
digest = "0.10"
hex = "0.4"
itertools = "0.14"
log = "0.4"
md-5 = "0.10"
quickcheck = "1"
quickcheck_macros = "1"
rocksdb = { version = "0.24", features = ["zstd"] }
rocksdb-store = "0.3"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
url = "2"
zstd = "0.13"
